--- a/src/main.scss
+++ b/src/main.scss
@@ -1,16 +1,9 @@
 //Colors
 $primary: #3a9acd !default;
-$secondary: #ff773f !default;
-$warning: #ff773f !default;
-$success: #33ca62 !default;
 $error: #e83b35 !default;
 
 $states: (
-  ('default', transparent, currentColor, rgba(black, 0.1), rgba(black, 0.2), rgba(black, 0.1), rgba(black, 0.1)),
   ('primary', $primary, white, transparent, darken($primary, 8%), darken($primary, 6%), darken($primary, 4%)),
-  ('secondary', $secondary, white, transparent, darken($secondary, 8%), darken($secondary, 6%), darken($secondary, 4%)),
-  ('warning', $warning, white, transparent, darken($warning, 8%), darken($warning, 6%), darken($warning, 4%)),
-  ('success', $success, white, transparent, darken($success, 8%), darken($success, 6%), darken($success, 4%)),
   ('error', $error, white, transparent, darken($error, 8%), darken($error, 6%), darken($error, 4%))
 );
 
@@ -25,7 +18,7 @@ $states: (
 @mixin GenerateVariables {
   @include GenerateVariable('border-radius', 3px);
   @include GenerateVariable('border-color', #eaeaea);
-  @include GenerateVariable('input-color', lighten($border-color, 6%));
+  @include GenerateVariable('input-color', #f2f2f2);
 
   @each $state in $states {
     @include GenerateVariable(nth($state, 1), nth($state, 2));
